侧边栏布局 调整样式 规范代码

--- a/blog/jianshu/Wei/layout/sidebar.html
+++ b/blog/jianshu/Wei/layout/sidebar.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>layout</title>
+    <title>Layout</title>
 
-    <link rel="stylesheet" href="../layout/css/index.css">W
+    <link rel="stylesheet" href="../layout/css/sidebar.css">
 </head>
 
 <body>
-    <div class="layui-side layui-bg-black"></div>
+    <div class="layui-side"></div>
 </body>
 
 </html>
